--- a/responsive.css
+++ b/responsive.css
@@ -1,33 +1,34 @@
 /* for tablets */
-@media screen and (max-width: 800px){
-    .navbar_main{
-        flex-direction: column;
-        align-items: center;     
-    }
-    .navbar_main>div:nth-child(2){
-        margin-top: 20px;
-    }
-    
+@media screen and (max-width: 800px) {
+  .navbar_main {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar_main > div:nth-child(2) {
+    margin-top: 20px;
+  }
 }
 
 /* for mobiles  */
-@media screen and (max-width: 500px){
-
-  .navbar_main>div:nth-child(2){
+@media screen and (max-width: 500px) {
+  .navbar_main > div:nth-child(2) {
     display: none;
-}
-.nav_ham_bergur{
+  }
+  .nav_ham_bergur {
     display: block;
     align-items: center;
   }
-.navbar_main{
+  .navbar_main {
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: green;
     /* padding-bottom: 20px; */
-  
+  }
+  .banner_main{
+    flex-direction: column;
 }
-
-
+.banner_child{
+    width: 100%;
+}
 }
