--- a/style.css
+++ b/style.css
@@ -76,3 +76,26 @@
   transform: translate(-50%, -50%);
 }
 /* banner css ends  here  */
+
+
+/* popular section starts here  */
+.popular_main{
+margin-top: 50px;
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+gap: 20px;
+ 
+}
+.card{
+  min-height: 200px;
+  padding: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  border-radius: 10px;
+
+}
+.card img{
+  width: 100%;
+  border-radius: 10px;
+}
+
+/* popular section ends here  */
