--- a/responsive.css
+++ b/responsive.css
@@ -7,7 +7,14 @@
   .navbar_main > div:nth-child(2) {
     margin-top: 20px;
   }
+  
+  .popular_main{
+    grid-template-columns: repeat(2, 1fr);
+     
+    }
+
 }
+
 
 /* for mobiles  */
 @media screen and (max-width: 500px) {
@@ -31,4 +38,9 @@
 .banner_child{
     width: 100%;
 }
+.popular_main{
+  grid-template-columns: repeat(1, 1fr);
+   
+  }
+
 }
