--- a/style.css
+++ b/style.css
@@ -93,9 +93,14 @@ gap: 20px;
   border-radius: 10px;
 
 }
+.card>div:nth-child(1){
+  height: 50%;
+}
 .card img{
   width: 100%;
+  height: 100%;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 /* popular section ends here  */
