--- a/style.css
+++ b/style.css
@@ -104,3 +104,41 @@ gap: 20px;
 }
 
 /* popular section ends here  */
+
+/* contact section starts here  */
+.contact{
+  border: 2px solid green;
+  min-height: 500px;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 20px;
+
+  /* grid-template-rows: repeat(12, 1fr); */
+}
+.child_1{
+background-color: gainsboro;
+grid-column: 1/span 7;
+border-radius: 70px;
+}
+.child_2{
+background-color: green;
+grid-column: 8/ span 5;
+border-radius: 70px;
+}
+.child_3{
+background-color: blue;
+grid-column: 1/span 5;
+border-radius: 70px;
+}
+.child_4{
+background-color: blueviolet;
+grid-column: 6/span 7;
+border-radius: 70px;
+}
+.contact img{
+  width: 100%;
+  height: 100%;
+  border-radius: 70px;  
+}
+/* contact section ends here  */
