contact section complete

--- a/style.css
+++ b/style.css
@@ -108,37 +108,56 @@ gap: 20px;
 /* contact section starts here  */
 .contact{
   border: 2px solid green;
-  min-height: 500px;
+  /* min-height: 200px; */
+  height: 300px;
   margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
   gap: 20px;
-
-  /* grid-template-rows: repeat(12, 1fr); */
 }
 .child_1{
 background-color: gainsboro;
 grid-column: 1/span 7;
+grid-row: 1/span 6;
 border-radius: 70px;
+position: relative;
 }
 .child_2{
 background-color: green;
 grid-column: 8/ span 5;
+grid-row: 1/span 6;
 border-radius: 70px;
+position: relative;
 }
 .child_3{
 background-color: blue;
 grid-column: 1/span 5;
+grid-row: 7/span 6;
 border-radius: 70px;
+grid-row: 7/span 6;
+position: relative;
+
 }
 .child_4{
 background-color: blueviolet;
 grid-column: 6/span 7;
+grid-row: 7/span 6;
 border-radius: 70px;
+position: relative;
 }
 .contact img{
   width: 100%;
   height: 100%;
   border-radius: 70px;  
+  filter: brightness(50%);
+}
+.icon{
+  color: white;
+  font-size: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 /* contact section ends here  */
