--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .nav_menu_btn {
   background-color: black;
   color: white;
-  padding: 5px;  
+  padding: 5px;
   border: none;
   margin-left: 10px;
   border-radius: 5px;
@@ -31,39 +31,36 @@
 /* navbar styles ends  here  */
 
 /* banner css starts here   */
-.banner_main{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: rgb(242,242,242);
-
+.banner_main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(242, 242, 242);
 }
 .main_content {
   max-width: 1200px;
   margin: 0 auto;
 }
-.banner_child{
-    width: 47%;
-    position: relative;
+.banner_child {
+  width: 47%;
+  position: relative;
 }
-.banner_child img{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+.banner_child img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
-.banner_btn{
+.banner_btn {
   border: 2px solid gray;
   padding: 10px;
   background-color: transparent;
   border-radius: 8px;
   margin-top: 10px;
-
-
 }
-.fifty_off{
+.fifty_off {
   background-color: rgba(0, 0, 0, 0.67);
   color: white;
   padding: 10px 15px;
@@ -77,26 +74,24 @@
 }
 /* banner css ends  here  */
 
-
 /* popular section starts here  */
-.popular_main{
-margin-top: 50px;
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-gap: 20px;
- 
+.popular_main {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
-.card{
+.card {
   min-height: 200px;
   padding: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   border-radius: 10px;
-
 }
-.card>div:nth-child(1){
+.card > div:nth-child(1) {
   height: 50%;
 }
-.card img{
+.card img {
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -106,8 +101,7 @@ gap: 20px;
 /* popular section ends here  */
 
 /* contact section starts here  */
-.contact{
-  border: 2px solid green;
+.contact {
   /* min-height: 200px; */
   height: 300px;
   margin-top: 50px;
@@ -116,43 +110,38 @@ gap: 20px;
   grid-template-rows: repeat(12, 1fr);
   gap: 20px;
 }
-.child_1{
-background-color: gainsboro;
-grid-column: 1/span 7;
-grid-row: 1/span 6;
-border-radius: 70px;
-position: relative;
+.child_1 {
+  grid-column: 1 / span 7;
+  grid-row: 1 / span 6;
+  border-radius: 70px;
+  position: relative;
 }
-.child_2{
-background-color: green;
-grid-column: 8/ span 5;
-grid-row: 1/span 6;
-border-radius: 70px;
-position: relative;
+.child_2 {
+  grid-column: 8 / span 5;
+  grid-row: 1 / span 6;
+  border-radius: 70px;
+  position: relative;
 }
-.child_3{
-background-color: blue;
-grid-column: 1/span 5;
-grid-row: 7/span 6;
-border-radius: 70px;
-grid-row: 7/span 6;
-position: relative;
-
+.child_3 {
+  grid-column: 1 / span 5;
+  grid-row: 7 / span 6;
+  border-radius: 70px;
+  grid-row: 7 / span 6;
+  position: relative;
 }
-.child_4{
-background-color: blueviolet;
-grid-column: 6/span 7;
-grid-row: 7/span 6;
-border-radius: 70px;
-position: relative;
+.child_4 {
+  grid-column: 6 / span 7;
+  grid-row: 7 / span 6;
+  border-radius: 70px;
+  position: relative;
 }
-.contact img{
+.contact img {
   width: 100%;
   height: 100%;
-  border-radius: 70px;  
+  border-radius: 70px;
   filter: brightness(50%);
 }
-.icon{
+.icon {
   color: white;
   font-size: 50px;
   position: absolute;
@@ -161,3 +150,43 @@ position: relative;
   transform: translate(-50%, -50%);
 }
 /* contact section ends here  */
+
+/* qna section starts here  */
+.qna_main {
+  margin-top: 50px;
+  height: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.qna_child {
+  width: 45%;
+}
+.qna_child img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.form_container {
+  /* border: 2px solid gold; */
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.form_field {
+  width: 48%;
+  margin-top: 20px;
+}
+.form_field_text_area {
+  width: 100%;
+  margin-top: 20px;
+}
+.form_container input,
+textarea,
+select {
+  border: 2px solid rgb(198, 177, 58);
+  width: 100%;
+  height: 40px;
+}
+/* qna section ends here  */
