--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@
   align-items: center;
 }
 .qna_child {
-  width: 45%;
+  width: 47%;
 }
 .qna_child img {
   width: 100%;
@@ -188,5 +188,15 @@ select {
   border: 2px solid rgb(198, 177, 58);
   width: 100%;
   height: 40px;
+}
+.qna_submit_btn{
+  background-color: rgb(20, 202, 105);
+  color: white;
+  padding: 15px 60px;
+  border-radius: 20px;
+  border: none;
+  display: block;
+  margin-left: auto;
+  font-size: 20px;
 }
 /* qna section ends here  */
